more usage information

--- a/.verb.md
+++ b/.verb.md
@@ -22,3 +22,17 @@ The main requirement is to provide the `SLACK_TEAM` and `SLACK_TOKEN` values. Th
 
 The `SLACK_TEAM` property is the same as the subdomain used when accessing slack... `https://{slack-team}.slack.com`.
 The `SLACK_TOKEN` property is the authentication token of an administrator for the specified slack team that can invite people to slack.
+
+## Webtask usage
+
+After the webtask has been created, it can be used by `POST`ing to the webtask url and providing an `email` property in the body.
+
+```html
+<form method="POST" action="https://webtask.it.auth0.com/api/run/wt-{my-profile}-0/my-slack-invite-name?webtask_no_cache=1">
+  <div>Email</div>
+  <div><input type="text" name="email"></div>
+  <div><input type="submit" value="Send"></div>
+</form>
+```
+
+A JSON object will be returned. If an error occurs, the JSON object will contain an `error` property with the corresponding error message. Otherwise, the success message from slack will be returned.
