update urls in docs

--- a/.verb.md
+++ b/.verb.md
@@ -10,7 +10,7 @@ module.exports = function(ctx, req, res) {
 
 ## What is this?
 
-This module is intended to be used in a [webtask][].io task to provide slack invitation functionality.
+This module is intended to be used in a [webtask.io](https://webtask.io/) task to provide slack invitation functionality.
 
 There is a distribution file provided in [dist/main.js](dist/main.js) if you want to deploy it to webtask.io directly using the following command:
 
